<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rocktech.macaddressdemo.MacAddr" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="40dp"
            android:text="@string/zyz_mac_address_rule"
            android:textColor="#000000"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#000000" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="#000000" />
    </RelativeLayout>

    <View
        android:layout_width="20dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000000" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="#000000" />
            

            <TextView
                android:layout_marginTop="140dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/tv_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zyz_line_code"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_barcode"
                android:layout_toRightOf="@+id/tv_barcode"
                android:singleLine="true"
                android:textColor="#000000" >
            </EditText>

            <TextView
                android:id="@+id/tv_mac_address"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_barcode"
                android:text="@string/zyz_mac_address"
                android:textColor="#000000"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/et_mac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_alignBaseline="@+id/tv_mac_address"
                android:layout_toRightOf="@+id/tv_mac_address"/>
            
            <TextView
                android:id="@+id/tv_sys_mac_address"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_mac_address"
                android:text="@string/zyz_system_mac_address"
                android:textColor="#000000"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/et_sys_mac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_alignBaseline="@+id/tv_sys_mac_address"
                android:layout_toRightOf="@+id/tv_sys_mac_address"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button2"
                android:layout_alignLeft="@+id/button2"
                android:layout_marginBottom="30dp"
                android:enabled="false"
                android:text="@string/zyz_write_into" />

            <Button
                android:id="@+id/button2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/zyz_read" />

            <Button
                android:id="@+id/button3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/zyz_exit" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>